...
    /// Image `__z`.
    static let __z = Rswift.ImageResource(bundle: R.hostingBundle, name: "__z")
    /// Image `_y_`.
    static let _y_ = Rswift.ImageResource(bundle: R.hostingBundle, name: "_y_")
    /// Image `_yz`.
    static let _yz = Rswift.ImageResource(bundle: R.hostingBundle, name: "_yz")
    /// Image `backButton`.
    static let backButton = Rswift.ImageResource(bundle: R.hostingBundle, name: "backButton")
    /// Image `camera`.
    static let camera = Rswift.ImageResource(bundle: R.hostingBundle, name: "camera")
    /// Image `circle_0`.
    static let circle_0 = Rswift.ImageResource(bundle: R.hostingBundle, name: "circle_0")
    /// Image `circle_10`.
...
    /// Image `deleteButton`.
    static let deleteButton = Rswift.ImageResource(bundle: R.hostingBundle, name: "deleteButton")
    /// Image `deletePlotButton`.
    static let deletePlotButton = Rswift.ImageResource(bundle: R.hostingBundle, name: "deletePlotButton")
    /// Image `doubleArrowDown`.
    static let doubleArrowDown = Rswift.ImageResource(bundle: R.hostingBundle, name: "doubleArrowDown")
    /// Image `doubleArrowUp`.
    static let doubleArrowUp = Rswift.ImageResource(bundle: R.hostingBundle, name: "doubleArrowUp")
    /// Image `drag`.
    static let drag = Rswift.ImageResource(bundle: R.hostingBundle, name: "drag")
    /// Image `enterButton`.
    static let enterButton = Rswift.ImageResource(bundle: R.hostingBundle, name: "enterButton")
    /// Image `equationSaved`.
...
    /// Image `nextPlot`.
    static let nextPlot = Rswift.ImageResource(bundle: R.hostingBundle, name: "nextPlot")
    /// Image `plotColorPallete`.
    static let plotColorPallete = Rswift.ImageResource(bundle: R.hostingBundle, name: "plotColorPallete")
    /// Image `plotIcon`.
    static let plotIcon = Rswift.ImageResource(bundle: R.hostingBundle, name: "plotIcon")
    /// Image `plusButton`.
    static let plusButton = Rswift.ImageResource(bundle: R.hostingBundle, name: "plusButton")
    /// Image `prevPlot`.
    static let prevPlot = Rswift.ImageResource(bundle: R.hostingBundle, name: "prevPlot")
    /// Image `recognition`.
    static let recognition = Rswift.ImageResource(bundle: R.hostingBundle, name: "recognition")
    /// Image `rotate`.
...
