...
            return cell
        }.disposed(by: bag)
        return tableView
    }()
    
    private lazy var confirmSelectionButton: UIBarButtonItem = {
        let button = UIBarButtonItem(title: "Confirm", style: .done,
                                     target: nil, action: nil)
        button.rx.tap.subscribe(onNext: self.didTapConfirmSelection)
            .disposed(by: bag)
        button.tintColor = Color.turquoise()
        return button
    }()
...
    
    // MARK: - Setup Methods
    
    override func setupUI() {
        super.setupUI()
        navigationItem.rightBarButtonItem = confirmSelectionButton
        title = "Saved Equations"
    }
    
    override func addSubviews() {
        super.addSubviews()
        view.addSubviews(tableView)
    }
...
