...
        label.textColor = Color.defaultText()!
        return label
    }()
    
    private lazy var equationTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Enter equation here..."
        textField.borderStyle = .none
        textField.delegate = self
        textField.isHidden = true
        textField.rx.text
            .subscribe(onNext: {
                if let text = $0 {
...
