...
                    as? SandboxEquationCell
                else {
                return UISwipeActionsConfiguration(actions: [])
            }
            let plotIndex = self.getPlotIndex(from: indexPath)
            let saveAction = UIContextualAction(
            style: .normal, title: "Save") { (_, _, _) in
                cell.performSavedAnimation()
                self.didTapSaveEquationAt(plotIndex)
            }
            saveAction.backgroundColor = Color.turquoise()
            let deleteAction = UIContextualAction(
            style: .destructive, title: "Delete") { _, _, _ in
...
